--- a/index.html
+++ b/index.html
@@ -1,4 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <title>Test JSON page</title>
+  <link rel="stylesheet" type="text/css" href="./styles.css">
+</head>
+
+<body>
+    <h1>Ray</h1>
+    <h2>Image Gallery</h2>
+
+    <div class="full-img">
+        <img class="displayed-img" src="images/pic1.jpg">
+        <div class="overlay"></div>
+        <button class="dark">Darken</button>
+      </div>
+      
+      <div class="thumb-bar">
+      
+      </div>
 
 
 <script>
