--- a/index.html
+++ b/index.html
@@ -20,8 +20,19 @@
       
       </div>
 
+</body>
+
 
 <script>
 
+  const mainpic = document.querySelector('.displayed-img');
+  const bar = document.querySelector('.thumb-bar');
+
+  const bttn = document.querySelector('button');
+  const overlay = document.querySelector('.overlay');
+
+
 
 </script>
+
+</html>
