--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-  <title>Test JSON page</title>
+  <meta charset="utf-8">
+  <title>Image Gallery</title>
   <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 
@@ -13,7 +14,7 @@
     <div class="full-img">
         <img class="displayed-img" src="images/pic1.jpg">
         <div class="overlay"></div>
-        <button class="shade">Darken</button>
+        <button class="dark">Darken</button>
       </div>
       
       <div class="thumb-bar">
