--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Image Gallery</title>
+  <title>Assignment 2 Image Gallery</title>
   <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 
@@ -13,7 +13,7 @@
 
     <div class="full-img">
         <img class="displayed-img" src="images/pic1.jpg">
-        <div class="overlay"></div>
+        <div class="shade"></div>
         <button class="dark">Darken</button>
       </div>
       
