--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Assignment 2 Image Gallery</title>
+  <title>INST377 Assignment 2 Image Gallery</title>
   <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 
